--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^2.8.1"
   },
   "dependencies": {
+    "@types/helmet": "0.0.37",
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.3",
